--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "grunt-contrib-uglify": "^5.2.2",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-string-replace": "^1.3.3"
+  },
+  "dependencies": {
+    "axios": "^1.6.2"
   }
 }
